--- a/sphinx/_templates/logo-text.html
+++ b/sphinx/_templates/logo-text.html
@@ -1,4 +1,4 @@
 <div class="text-logo">
   <a href="{{ homepage() }}">{{ theme_project_nav_name or shorttitle }}</a>&nbsp;&nbsp;
-  <a href="https://github.com/replab/quantum"><i class="fab fa-github"></i></a>&nbsp;
+  <a href="https://github.com/replab/sandbox"><i class="fab fa-github"></i></a>&nbsp;
 </div>
